src/test/ui/issues/50000-59999/issue-54943.nll.stderr
error: lifetime may not live long enough
  --> $DIR/issue-54943.rs:6:13
   |
LL | fn boo<'a>() {
   |        -- lifetime `'a` defined here
...
LL |     let x = foo::<&'a u32>();
   |             ^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`
   |
   = help: consider replacing `'a` with `'static`

error: aborting due to previous error

